--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,16 @@ strum = { version = "0.24.0", features = ["derive"] }
 strum_macros = "0.24.0"
 once_cell = "1.9.0"
 
+[dependencies.windows]
+version = "0.39.0"
+features = [
+    "Data_Xml_Dom",
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+]
+
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["winuser"] }
 
