--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 strum = { version = "0.24.0", features = ["derive"] }
 strum_macros = "0.24.0"
 once_cell = "1.9.0"
+num_enum = "0.5.7"
 
 [dependencies.windows]
 version = "0.39.0"
