--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ num_enum = "0.5.7"
 once_cell = "1.9.0"
 strum = {version = "0.24.0", features = ["derive"]}
 strum_macros = "0.24.0"
-
+chrono = "0.4"
 [dependencies.windows]
 features = [
   "Data_Xml_Dom",
