--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ once_cell = "1.9.0"
 strum = {version = "0.24.0", features = ["derive"]}
 strum_macros = "0.24.0"
 chrono = "0.4"
+toml = "0.5.9"
+serde = { version = "1.0", features = ["derive"] }
+
 [dependencies.windows]
 features = [
   "Data_Xml_Dom",
